--- a/MiniBus/app/src/main/res/layout/activity_main.xml
+++ b/MiniBus/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:listSelector="@android:color/transparent"
                 android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/textView" />
+                app:layout_constraintTop_toBottomOf="@id/my_position_textview" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
     <LinearLayout
